updated gallary section , FAQ's  section

--- a/src/components/Schedule/Schedule.module.css
+++ b/src/components/Schedule/Schedule.module.css
@@ -46,7 +46,7 @@
 
 .keyDatesCards {
   border-radius: 10px;
-  background: #1b1c27; /* Adjusted background color */
+  background: #050a3f; /* Adjusted background color */
   box-shadow: inset 0px -4px 10px rgba(255, 130, 191, 0.7); /* Keep box shadow color */
   display: block;
   width: 560px;
