--- a/src/components/FAQ/FAQs.css
+++ b/src/components/FAQ/FAQs.css
@@ -22,7 +22,7 @@ faq-container h1 {
 
 .faq {
   background-color: transparent;
-  border: 1px solid #a555ec;
+  border: 1px solid #5B8F81;
   border-radius: 10px;
   padding: 20px;
   margin: 15px 0;
@@ -33,7 +33,7 @@ faq-container h1 {
 }
 
 .faq.active {
-  background-color: #a555ec60;
+  background-color: #5B8F81;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1), 0 3px 6px rgba(0, 0, 0, 0.1);
 }
 
@@ -86,7 +86,7 @@ faq-container h1 {
 }
 
 .faq.active .faq-toggle {
-  background-color: #a555ec;
+  background-color: #197d25;
   border-radius: 50%;
   color: #ffffd9;
 }
