--- a/src/components/MapChart/MapChart.css
+++ b/src/components/MapChart/MapChart.css
@@ -101,8 +101,8 @@
   right: 120px;
   bottom: 0;
   z-index: 2;
-  border: 3px solid #891a98;
-  box-shadow: rgb(202, 28, 225) 0px 4px 10px;
+  border: 3px solid #5B8F81;
+  box-shadow:  rgb(91, 143, 129) 0px 4px 10px;
   -webkit-animation: zoomIn 4s infinite; /* WebKit animation */
   animation: zoomIn 4s infinite;
   -webkit-animation-delay: 1ms;
@@ -133,8 +133,8 @@
   right: 0;
   bottom: 0;
   z-index: 2;
-  border: 3px solid #891a98;
-  box-shadow: rgb(202, 28, 225) 0px 4px 10px;
+  border: 3px solid #5B8F81;
+  box-shadow:  rgb(91, 143, 129) 0px 4px 10px;
   -webkit-animation: zoomIn 4s infinite; /* WebKit animation */
   animation: zoomIn 4s infinite;
   -webkit-animation-delay: 1ms;
@@ -165,8 +165,8 @@
   right: 120px;
   bottom: 0;
   z-index: 2;
-  border: 3px solid #891a98;
-  box-shadow: rgb(202, 28, 225) 0px 4px 10px;
+  border: 3px solid #5B8F81;
+  box-shadow:  rgb(91, 143, 129) 0px 4px 10px;
   -webkit-animation: zoomIn 4s infinite; /* WebKit animation */
   animation: zoomIn 4s infinite;
   -webkit-animation-delay: 1ms;
@@ -197,8 +197,8 @@
   right: 120px;
   bottom: 78px;
   z-index: 2;
-  border: 3px solid #891a98;
-  box-shadow: rgb(202, 28, 225) 0px 4px 10px;
+  border: 3px solid #5B8F81;
+  box-shadow:  rgb(91, 143, 129) 0px 4px 10px;
   -webkit-animation: zoomIn 4s infinite; /* WebKit animation */
   animation: zoomIn 4s infinite;
   -webkit-animation-delay: 1ms;
@@ -231,8 +231,8 @@
   right: 120px;
   bottom: 212px;
   z-index: 2;
-  border: 3px solid #891a98;
-  box-shadow: rgb(202, 28, 225) 0px 4px 10px;
+  border: 3px solid #5B8F81;
+  box-shadow:  rgb(91, 143, 129) 0px 4px 10px;
   -webkit-animation: zoomIn 4s infinite; /* WebKit animation */
   animation: zoomIn 4s infinite;
   -webkit-animation-delay: 1ms;
@@ -263,8 +263,8 @@
   right: 237px;
   bottom: 52px;
   z-index: 2;
-  border: 3px solid #891a98;
-  box-shadow: rgb(202, 28, 225) 0px 4px 10px;
+  border: 3px solid #5B8F81;
+  box-shadow:  rgb(91, 143, 129) 0px 4px 10px;
   -webkit-animation: zoomIn 4s infinite; /* WebKit animation */
   animation: zoomIn 4s infinite;
   -webkit-animation-delay: 1ms;
@@ -297,8 +297,8 @@
   right: 120px;
   bottom: 73px;
   z-index: 2;
-  border: 3px solid #891a98;
-  box-shadow: rgb(202, 28, 225) 0px 4px 10px;
+  border: 3px solid #5B8F81;
+  box-shadow:  rgb(91, 143, 129) 0px 4px 10px;
   -webkit-animation: zoomIn 4s infinite; /* WebKit animation */
   animation: zoomIn 4s infinite;
   -webkit-animation-delay: 1ms;
