--- a/src/components/Sponsor.css
+++ b/src/components/Sponsor.css
@@ -27,7 +27,7 @@
 
 /* Original styling for .SponsorText */
 .SponsorText {
-  box-shadow: inset 0px -4px 10px rgba(202, 28, 225, 0.5);
+  box-shadow: inset 0px -4px 10px rgba(130, 180, 165, 0.7);
   border-radius: 20px;
   padding: 10px;
   margin-bottom: 45px;
@@ -36,11 +36,11 @@
 
 /* Hover effect with box shadow color related to background gradient */
 .SponsorText:hover {
-  background: linear-gradient(98.84deg, #ffff80 43.27%, #ff82bf 71.84%);
+  background: linear-gradient(98.84deg, #ffff80 43.27%, #5B8F81 71.84%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
-  box-shadow: inset 0px -4px 10px rgba(255, 130, 191, 0.7); /* Adjust box shadow color */
+  box-shadow: inset 0px -4px 10px rgba(110, 150, 135, 0.5); /* Adjust box shadow color */
 }
 
 .spon_p {
