--- a/src/components/MediumSponsorsCard.css
+++ b/src/components/MediumSponsorsCard.css
@@ -5,7 +5,7 @@
   transition: 0.3s ease-in-out;
   /* box-shadow: 2px 3px 10px rgba(0, 0, 0, 2); */
   /* box-shadow: rgb(85, 6, 95) 0px 4px 10px; */
-  box-shadow: inset 0px -4px 10px rgba(255, 130, 191, 0.7); /* Adjust box shadow color */
+  box-shadow: inset 0px -4px 10px rgb(91, 143, 129); /* Adjust box shadow color */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,7 +15,10 @@
 .mediumcard:hover {
   /* transition: 0.3s ease-in-out; */
   /* box-shadow: 2px 3px 20px rgba(0, 0, 0, 0.7); */
-  box-shadow: rgb(202, 28, 225) 0px 4px 10px;
+  box-shadow: 0px 0px 12px rgba(120, 200, 180, 0.7);
+
+
+
 }
 .mediumcard img {
   /* width: 100%;
