--- a/src/components/Schedule/Schedule.module.css
+++ b/src/components/Schedule/Schedule.module.css
@@ -46,7 +46,7 @@
 
 .keyDatesCards {
   border-radius: 10px;
-  background: #050a3f; /* Adjusted background color */
+  background: #40655B; /* Adjusted background color */
   box-shadow: inset 0px -4px 10px rgb(91, 143, 129); /* Keep box shadow color */
   display: block;
   width: 560px;
