--- a/src/components/SocialMedia/SocialMedia.css
+++ b/src/components/SocialMedia/SocialMedia.css
@@ -13,9 +13,9 @@ ul {
 
 
 .socialmedia a:hover svg {
-  fill: #891696;
+  fill: #5B8F81;
 }
 
-/* .Linefit{
- color: #891696;
-} */
+.Linefit{
+ color: #5B8F81;
+}
