--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ body {
   font-weight: 400;
   overflow-x: hidden;
   position: relative;
-  background-color: #1b1c27 !important;
+  background-color: #1b2726 !important;
   color: #fff !important;
   /* font-family: "Helvetica", sans-serif !important; */
 }
@@ -113,7 +113,7 @@ p.danger {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px #1b1c27;
+  box-shadow: inset 0 0 5px #1b2726;
   border-radius: 10px;
 }
 
@@ -141,7 +141,7 @@ nav.navbar {
 
 nav.navbar.scrolled {
   padding: 0px 0;
-  background-color: #1b1c27;
+  background-color: #1b2726;
 }
 
 nav.navbar a.navbar-brand {
