Change the styling for bronze  make it same as the Gold and silver

--- a/src/components/GeneralSponsorCard.css
+++ b/src/components/GeneralSponsorCard.css
@@ -6,7 +6,7 @@
   /* box-shadow: 2px 3px 10px rgba(0, 0, 0, 2); */
   /* box-shadow: rgb(48, 3, 54) 0px 4px 10px; */
   /* box-shadow: rgb(85, 6, 95) 0px 4px 10px; */
-  box-shadow: inset 0px -4px 10px rgba(255, 130, 191, 0.7); /* Adjust box shadow color */
+  box-shadow: inset 0px -4px 10px rgba(130, 180, 165, 0.7); /* Adjust box shadow color */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,7 +17,7 @@
   transition: 0.3s ease-in-out;
   /* box-shadow: 2px 3px 20px rgba(0, 0, 0, 0.7); */
   /* box-shadow: rgb(202, 28, 225) 0px 4px 10px; */
-  box-shadow: rgb(202, 28, 225) 0px 4px 10px;
+  box-shadow: inset 0px -4px 10px rgba(110, 150, 135, 0.5);
 }
 .generalcard img {
   width: 14rem;
