--- a/src/components/HackathonOverview.css
+++ b/src/components/HackathonOverview.css
@@ -31,7 +31,7 @@
   text-align: center;
   padding: 60px 50px;
 
-  box-shadow: 10px 10px 25px #4a2fbd;
+  box-shadow: 10px 10px 25px #5B8F81;
   border-radius: 50px;
 }
 
